Alignment Issues Fixed

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -13,6 +13,12 @@
 	@media (min-width: 900px){
 		height: 65em;
 	}
+
+	@media (min-width: 1000px){
+		//height: 80em;
+		height: 110%;
+	}
+
 }
 
 .homepage-introA{
