--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -4,6 +4,14 @@
 
 //WORK
 
+.home{
+	overflow-y: auto;
+
+	@media (min-width: 1100px){
+		height: 900px;
+	}
+}
+
 .work-row{
 	margin: 0 auto 2em auto;
 	padding: 0em 0em 1.5em 0em;
@@ -87,9 +95,9 @@
 }
 
 
-/*.descriptionE:hover{
+.descriptionE:hover{
 	opacity: 1;
-}*/	
+}
 
 .descriptionF{
 	@extend %description;
